# jimbob-playground

./: .releaserc.yml  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: dispatch.yml  master.yml  parallel.yml  pull-requests.yml  release-drafter.yml
