[tool.poetry]
name = "jimbob-playground"
version = "0.1.0"
description = "Jimbobs Python Playground"
authors = ["Jim Brännlund <jimbrannlund@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
